[gd_scene load_steps=27 format=3 uid="uid://ddn276hlmbuv1"]

[ext_resource type="Script" path="res://Source/fight.gd" id="1_dydn3"]
[ext_resource type="Texture2D" uid="uid://clk8ndx25krb3" path="res://Assets/skybox_spring_stylized_0.png" id="2_eihxk"]
[ext_resource type="PackedScene" uid="uid://jwldsvv4mkut" path="res://Assets/Env/keg_decorated.gltf.glb" id="4_gf8g5"]
[ext_resource type="PackedScene" uid="uid://dvykbm6ril1vh" path="res://Assets/Env/keg.gltf.glb" id="5_bjn3t"]
[ext_resource type="PackedScene" uid="uid://kg1oai4dfag" path="res://Assets/Env/chest.glb" id="6_lvca0"]
[ext_resource type="PackedScene" uid="uid://0oxkryp141ye" path="res://Assets/Env/table_long_decorated_A.gltf.glb" id="7_vfj4w"]
[ext_resource type="PackedScene" uid="uid://bf2lfsdns11ti" path="res://Assets/Env/bottle_A_labeled_brown.gltf.glb" id="8_6ekes"]
[ext_resource type="PackedScene" uid="uid://cdk57cs1cygcd" path="res://Assets/Env/bottle_A_labeled_green.gltf.glb" id="9_ndae8"]
[ext_resource type="PackedScene" uid="uid://c5jlrsvqqeh6f" path="res://Assets/Env/bottle_C_brown.gltf.glb" id="10_numsa"]
[ext_resource type="PackedScene" uid="uid://5uw8cf452uc7" path="res://Assets/Env/wall_arched.gltf.glb" id="11_wcngc"]
[ext_resource type="PackedScene" uid="uid://b6c4q102iojfo" path="res://Assets/Env/wall_corner_gated.gltf.glb" id="12_hec6b"]
[ext_resource type="PackedScene" uid="uid://ci6p5m83c5sce" path="res://Assets/Env/wall_corner.gltf.glb" id="13_gb7dc"]
[ext_resource type="PackedScene" uid="uid://3x8yf2g8hvpu" path="res://Assets/Env/crates_stacked.gltf.glb" id="14_ppx0m"]
[ext_resource type="PackedScene" uid="uid://bqvc4k1wjkwi4" path="res://Assets/Env/floor_foundation_allsides.gltf.glb" id="15_yqjr6"]
[ext_resource type="PackedScene" uid="uid://bysfurl20uo5m" path="res://Assets/Env/pillar.gltf.glb" id="16_jqcm5"]
[ext_resource type="PackedScene" uid="uid://dxfu8yxtsbayx" path="res://Assets/Env/pillar_decorated.gltf.glb" id="17_amjpx"]
[ext_resource type="PackedScene" uid="uid://cxkxbyuwl5dxc" path="res://Assets/Env/shelf_large.gltf.glb" id="18_ndjdw"]
[ext_resource type="PackedScene" uid="uid://bqxdlaiixkmfy" path="res://Assets/Maps/FightMapOne.tscn" id="19_ijqb2"]
[ext_resource type="PackedScene" uid="uid://danwk44yvkm27" path="res://Assets/Env/rubble_large.gltf.glb" id="19_yahus"]
[ext_resource type="Texture2D" uid="uid://5mofx33pjyti" path="res://Assets/circle.png" id="21_kjnx8"]
[ext_resource type="Texture2D" uid="uid://bhoimw24m7px" path="res://Assets/moves_back.png" id="22_d1gcs"]
[ext_resource type="PackedScene" uid="uid://bwb6j1swoanf8" path="res://Assets/Env/coin_stack_medium.gltf.glb" id="24_s36ch"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_g8eao"]
panorama = ExtResource("2_eihxk")

[sub_resource type="Sky" id="Sky_0vst4"]
sky_material = SubResource("PanoramaSkyMaterial_g8eao")

[sub_resource type="Environment" id="Environment_nihas"]
background_mode = 2
sky = SubResource("Sky_0vst4")
sky_rotation = Vector3(3.14159, 0, 0)
ambient_light_source = 2
ambient_light_color = Color(1, 0.956863, 0.835294, 1)
ambient_light_energy = 0.7
glow_enabled = true
glow_blend_mode = 1
fog_sky_affect = 0.0
fog_height_density = 0.3369
adjustment_enabled = true
adjustment_saturation = 1.2

[sub_resource type="LabelSettings" id="LabelSettings_ko5ua"]
font_size = 20

[node name="Fight" type="Node3D"]
script = ExtResource("1_dydn3")

[node name="Env" type="Node3D" parent="."]

[node name="WorldEnv" type="WorldEnvironment" parent="Env"]
environment = SubResource("Environment_nihas")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Env"]
transform = Transform3D(1, 0, 0, 0, 0.552344, 0.833616, 0, -0.833616, 0.552344, 0, 0, 0)
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="keg_decorated_gltf" parent="Env" instance=ExtResource("4_gf8g5")]
transform = Transform3D(0.815239, 0, 0.579125, 0, 1, 0, -0.579125, 0, 0.815239, -38.5841, -1.74866, 6.66425)

[node name="keg_gltf" parent="Env" instance=ExtResource("5_bjn3t")]
transform = Transform3D(0.544727, 0, 0.838614, 0, 1, 0, -0.838614, 0, 0.544727, -44.0217, -2.01424, 17.7448)

[node name="chest2" parent="Env" instance=ExtResource("6_lvca0")]
transform = Transform3D(0.0368181, 0, -0.999322, 0, 1, 0, 0.999322, 0, 0.0368181, -13.3678, -2.02119, 9.51945)

[node name="table_long_broken_gltf" parent="Env" instance=ExtResource("7_vfj4w")]
transform = Transform3D(0.862876, 0, 0.505416, 0, 1, 0, -0.505416, 0, 0.862876, -38.6478, -1.56919, 28.3982)

[node name="bottle_A_labeled_brown_gltf" parent="Env" instance=ExtResource("8_6ekes")]
transform = Transform3D(0.671281, -0.741203, 0, 0.741203, 0.671281, 0, 0, 0, 1, -37.8403, -1.75519, 27.4572)

[node name="bottle_A_labeled_green_gltf" parent="Env" instance=ExtResource("9_ndae8")]
transform = Transform3D(1, 0, 0, 0, -0.0438112, 0.99904, 0, -0.99904, -0.0438112, -37.1527, -1.56919, 27.9553)

[node name="bottle_C_brown_gltf" parent="Env" instance=ExtResource("10_numsa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.9776, -0.513491, 29.9744)

[node name="wall_gltf" parent="Env" instance=ExtResource("11_wcngc")]
transform = Transform3D(0.813314, 0, -0.581825, 0, 1, 0, 0.581825, 0, 0.813314, -45.7618, -1.56919, 33.5055)

[node name="wall_corner_gltf" parent="Env" instance=ExtResource("12_hec6b")]
transform = Transform3D(0.486747, 0, -0.873543, 0, 1, 0, 0.873543, 0, 0.486747, -10.7863, -2.13405, 9.81462)

[node name="wall_broken_gltf" parent="Env" instance=ExtResource("13_gb7dc")]
transform = Transform3D(0.875, 0, 0.484122, 0, 1, 0, -0.484122, 0, 0.875, -12.7083, -2.13405, 6.40503)

[node name="crates_stacked_gltf" parent="Env" instance=ExtResource("14_ppx0m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.6132, -1.56919, 1.08865)

[node name="floor_foundation_allsides_gltf" parent="Env" instance=ExtResource("15_yqjr6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45.1317, -2.02578, 14.8943)

[node name="pillar_gltf" parent="Env" instance=ExtResource("16_jqcm5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -41.6786, -1.73797, 7.60741)

[node name="pillar_decorated_gltf" parent="Env" instance=ExtResource("17_amjpx")]
transform = Transform3D(-0.538256, 0, -0.842781, 0, 1, 0, 0.842781, 0, -0.538256, -15.8758, -1.56919, 27.1465)

[node name="rubble_large_gltf" parent="Env" instance=ExtResource("18_ndjdw")]
transform = Transform3D(0.915915, 0, 0.401372, 0, 1, 0, -0.401372, 0, 0.915915, -31.2493, -1.56919, -2.37467)

[node name="rubble_half_gltf" parent="Env" instance=ExtResource("19_yahus")]
transform = Transform3D(0.502462, 0, 0.8646, 0, 1, 0, -0.8646, 0, 0.502462, -15.2123, -1.56919, 26.7876)

[node name="Sketchfab_Scene" parent="Env" instance=ExtResource("19_ijqb2")]
transform = Transform3D(-1.74846e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.74846e-08, 0, 0, 0)

[node name="coin_stack_medium_gltf" parent="Env" instance=ExtResource("24_s36ch")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.222, -0.589149, 28.3111)

[node name="Positions" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.0235, 0, 0)

[node name="FighterOne" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.60546, -1.99262, 20.0021)

[node name="Plate" type="Sprite3D" parent="Positions/FighterOne"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0.0953844, 0)
modulate = Color(1, 1, 0, 0.564706)
texture = ExtResource("21_kjnx8")

[node name="FighterTwo" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.80173, -1.59746, 20.0021)

[node name="Plate" type="Sprite3D" parent="Positions/FighterTwo"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0.158105, 0)
modulate = Color(1, 1, 0, 0.564706)
texture = ExtResource("21_kjnx8")

[node name="Support" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.85801, -1.68972, 27.8411)

[node name="Sprite3D" type="Sprite3D" parent="Positions/Support"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0.175314, 0)
modulate = Color(0, 1, 0, 0.564706)
texture = ExtResource("21_kjnx8")

[node name="Scout" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82328, -1.34374, 1.93018)

[node name="Sprite3D" type="Sprite3D" parent="Positions/Scout"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0.0953844, 0)
modulate = Color(0.537255, 0.203922, 1, 0.698039)
texture = ExtResource("21_kjnx8")

[node name="Enemies" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.0235, 0, 0)

[node name="Center" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.91365, -1.64782, 11.6253)

[node name="Front" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1899, -1.64782, 14.8927)

[node name="Left" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.51863, -1.64782, 11.6806)

[node name="Right" type="Marker3D" parent="Enemies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.334641, -1.64782, 11.6806)

[node name="CameraRotator" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.2843, 18.5448, 15.0562)

[node name="SceneCamera" type="Camera3D" parent="CameraRotator"]
transform = Transform3D(1, 0, 0, 0, 0.747787, 0.663939, 0, -0.663939, 0.747787, 0, -1.70288, 19.3222)
current = true
fov = 80.0

[node name="TestTurnTimer" type="Timer" parent="."]
one_shot = true

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MoveLabel" type="TextureRect" parent="Interface"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.191935
anchor_top = 0.1
anchor_right = 0.808065
anchor_bottom = 0.244
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("22_d1gcs")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Interface/MoveLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.10733
anchor_top = 0.298611
anchor_right = 0.903141
anchor_bottom = 0.694444
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
label_settings = SubResource("LabelSettings_ko5ua")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="TestTurnTimer" to="." method="_on_test_turn_timer_timeout"]
